# py-taplo

./: .bumpversion.cfg  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat
py_taplo/: __init__.py  cli.py  config.py  taplo.py  version.py
tests/: __init__.py  conftest.py  test_cli.py
tests/data/: pyproject.toml
