[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
requires_python = ">=3.10"

[project]
authors = [{ name = "Matt Krueger", email = "mkrueger@rstms.net" }]
classifiers = [
  "Intended Audience :: Developers",

  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
dynamic = ["version", "description"]
keywords = ["py_taplo"]
license = { file = "LICENSE" }
name = "py-taplo"
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = ["click"]

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "coverage",
  "isort",
  "flake8",
  "flake8-length",
  "pytest",
  "python-box",
  "toml",
  "tox",
]
docs = ["m2r2", "sphinx", "sphinx-click", "sphinx-rtd-theme"]

[tool.flit.module]
name = "py_taplo"

[project.urls]
Home = "https://github.com/rstms/py_taplo"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']

[project.scripts]
ptt = "py_taplo:cli"
